--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "price-power-up",
     "version": "1.0",
     "description": "The Power-Up for Trello that shows price and goal for member(-s), if the cards are pay.",
-    "repository": "git@github.com:Ivasik78/TrelloPrice.git",
-    "author": "Ivasik",
+    "repository": "git@github.com:Icosider/TrelloFinances.git",
+    "author": "Icosider",
     "license": "MIT",
     "connectors": {
         "iframe": {
